fix page wrapping

--- a/sass/_article.scss
+++ b/sass/_article.scss
@@ -5,6 +5,8 @@ article {
 
 article.wide {
   max-width: 1200px;
+  padding: 1em;
+  margin: 0 auto;
 }
 
 article pre {
